--- a/Spring-Project/src/main/resources/static/css/footer.css
+++ b/Spring-Project/src/main/resources/static/css/footer.css
@@ -13,7 +13,7 @@ footer {
 }
 
 .footer-container .footer-logo {
-    flex: 0 0 auto; /* 로고 크기 고정 */
+    flex: 0 0 auto;
 }
 
 .footer-container .footer-logo img {
@@ -24,32 +24,32 @@ footer {
 
 .footer-container .footer-info {
     display: flex;
-    justify-content: flex-end; /* 오른쪽 정렬 */
-    flex: 1; /* 남은 공간 차지 */
-    gap: 40px; /* Contact와 About 사이 간격 */
+    justify-content: flex-end;
+    flex: 1;
+    gap: 40px;
 }
 
 .footer-container .footer-contact, .footer-about {
     display: flex;
     flex-direction: column;
-    align-items: center; /* 중앙 정렬로 변경 */
+    align-items: center;
 }
 
 footer .footer-container h4 {
     margin-bottom: 10px;
     margin-top: 0;
-    text-align: center; /* 제목 중앙 정렬 */
+    text-align: center;
 }
 
 footer .footer-container ul {
-    list-style-type: disc; /* 리스트 문양 표시 */
-    padding-left: 20px; /* 왼쪽 패딩 추가 */
+    list-style-type: disc;
+    padding-left: 20px;
     margin: 0;
 }
 
 footer .footer-container li {
     margin-bottom: 15px;
-    text-align: left; /* 리스트 항목 왼쪽 정렬 */
+    text-align: left;
 }
 
 footer .footer-container a {
