--- a/Spring-Project/src/main/resources/static/css/mypagestyles.css
+++ b/Spring-Project/src/main/resources/static/css/mypagestyles.css
@@ -34,21 +34,6 @@ main {
     margin: 0 auto;
 }
 
-.go-back {
-    display: inline-block;
-    background-color: #CD31AB;
-    color: white;
-    padding: 10px 20px;
-    border-radius: 50px;
-    text-decoration: none;
-    font-size: 14px;
-    font-weight: bold;
-    position: absolute;
-    top: 200px;
-    left: 50px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-}
-
 .signup-container {
     background-color: #fff;
     padding: 20px;
@@ -87,14 +72,14 @@ h2 {
 
 .button-group {
     display: flex;
-    justify-content: center; /* 중앙 정렬로 변경 */
+    justify-content: center;
     margin-top: 20px;
-    gap: 20px; /* 버튼 사이의 간격 유지 */
+    gap: 20px;
 }
 
 .modify-btn, .delete-btn {
-    width: 40%; /* 버튼 너비를 40%로 줄임 */
-    max-width: 200px; /* 최대 너비도 줄임 */
+    width: 40%;
+    max-width: 200px;
     padding: 10px;
     background-color: #CD31AB;
     color: white;
@@ -111,7 +96,7 @@ h2 {
 
 .delete-btn {
     background-color: #CD31AB;
-    color: red; /* 글자색을 빨간색으로 변경 */
+    color: red;
 }
 
 footer {
