--- a/Spring-Project/src/main/resources/static/css/signupstyles.css
+++ b/Spring-Project/src/main/resources/static/css/signupstyles.css
@@ -5,7 +5,6 @@ html, body {
 }
 
 body {
-    font-family: Arial, sans-serif;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -24,17 +23,6 @@ main {
     width: 100%;
     max-width: 400px;
     padding: 20px;
-}
-
-.go-back {
-    align-self: flex-start;
-    background-color: #CD31AB;
-    color: white;
-    padding: 5px 15px;
-    border-radius: 20px;
-    text-decoration: none;
-    font-size: 14px;
-    margin-bottom: 20px;
 }
 
 .login_icon {
@@ -75,11 +63,11 @@ h2 {
     border: none;
     border-bottom: 1px solid #ddd;
     box-sizing: border-box;
-    text-align: center; /* 입력칸 문구 가운데 정렬 */
+    text-align: center;
 }
 
 .signup-container input::placeholder {
-    text-align: center; /* 플레이스홀더 텍스트도 가운데 정렬 */
+    text-align: center;
 }
 
 .signup-btn {
