--- a/Spring-Project/src/main/resources/static/css/writePost.css
+++ b/Spring-Project/src/main/resources/static/css/writePost.css
@@ -44,19 +44,6 @@ input:focus {
     justify-content: start;
 }
 
-.back-button {
-
-    font-size: 16px;
-    border-radius: 32px;
-    padding: 8px 16px 8px 16px;
-    margin: 30px;
-    background-color: #CD31AB;
-    color: white;
-
-    width: 150px;
-    align-items: center;
-}
-
 .post-container {
     display: flex;
     align-items: center;
@@ -114,9 +101,11 @@ input:focus {
 }
 
 .post-button {
-    line-height: 45px;
-    width: 100px;
-    height: 50px;
-    display: flex;
-    align-items: center;
+    background-color: #CD31AB;
+    color: white;
+    padding: 5px 15px;
+    border-radius: 20px;
+    text-decoration: none;
+    font-weight: bold;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
 }
