--- a/Spring-Project/src/main/resources/templates/editPost.html
+++ b/Spring-Project/src/main/resources/templates/editPost.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" th:href="@{/css/editPost.css}">
     <link rel="stylesheet" th:href="@{/css/header.css}">
     <link rel="stylesheet" th:href="@{/css/footer.css}">
+    <link rel="stylesheet" th:href="@{/css/common.css}">
     <title>Your App? My App! YAMA - 게시글 작성</title>
 </head>
 <body>
@@ -24,7 +25,7 @@
 </header>
 <main>
     <div class="back-button-container">
-        <button class="back-button">Go To Back</button>
+        <button th:onclick="|location.href='@{/v1/posts}'|" class="back-button">Go To Back</button>
     </div>
     <section class="post-container">
         <div class="icon">
@@ -44,7 +45,7 @@
             </select>
             <textarea name="content" placeholder="사용해 본 Application에 대한 후기를 남겨주세요!" th:text="${board.content}"></textarea>
             <div class="back-button-container">
-                <button class="back-button" type="submit">Edit</button>
+                <button type="submit">Edit</button>
             </div>
         </form>
 
