--- a/Spring-Project/src/main/resources/templates/signin.html
+++ b/Spring-Project/src/main/resources/templates/signin.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YAMA - Your App? My App!</title>
-    <link rel="stylesheet" th:href="@{/css/main.css}">
     <link rel="stylesheet" th:href="@{/css/footer.css}">
     <link rel="stylesheet" th:href="@{/css/header.css}">
     <link rel="stylesheet" th:href="@{/css/signinstyles.css}">
+    <link rel="stylesheet" th:href="@{/css/common.css}">
 </head>
 <body>
 <header>
@@ -27,7 +27,7 @@
 
 <main>
     <main>
-        <a href="#" class="go-back">Go To Back</a>
+        <button th:onclick="|location.href='@{/v1/main}'|" class="back-button">Go To Back</button>
         <div class="login_icon"><img src="/images/login_icon.png"/></div>
 
 
