fix: 게시글 리스트 버튼 개별 설정, 글쓰기 버튼 css 적용
Issue: #38

--- a/Spring-Project/src/main/resources/templates/categoryPost.html
+++ b/Spring-Project/src/main/resources/templates/categoryPost.html
@@ -76,7 +76,7 @@
             </tbody>
         </table>
 
-        <button th:onclick="|location.href='@{/v1/posts/write}'|">글쓰기 버튼</button>
+        <button class="back-button" th:onclick="|location.href='@{/v1/posts/write}'|">글쓰기</button>
 
 
     </main>
