fix: back-button 공통 속성 변경
고정 위치가 공통 속성이어서 변경했습니다.

Issue: #38

--- a/Spring-Project/src/main/resources/static/css/common.css
+++ b/Spring-Project/src/main/resources/static/css/common.css
@@ -13,9 +13,11 @@ button {
 }
 
 .back-button {
-    position: absolute;
-    top: 200px;
-    left: 50px;
+    font-size: 16px;
+    padding: 8px 16px 8px 16px;
+    margin: 56px;
+    background-color: #CD31AB;
+    color: white;
 }
 
 input:focus {
