--- a/Spring-Project/src/main/resources/static/css/editPost.css
+++ b/Spring-Project/src/main/resources/static/css/editPost.css
@@ -44,6 +44,7 @@ textarea {
     display: flex;
     align-items: center;
     flex-direction: column;
+    margin-top: 50px;
 }
 
 .icon {
@@ -57,6 +58,7 @@ textarea {
 .icon-img {
     width: 250px;
     height: 250px;
+
 }
 
 .icon-img-add-button {
@@ -64,9 +66,7 @@ textarea {
     height: 50px;
     margin-left: 50px;
     margin-top: 200px;
-
     align-items: center;
-    line-height: 45px;
 }
 
 .input {
