fix: signIn 버튼 크기 조정
Issue: #38

--- a/Spring-Project/src/main/resources/templates/signin.html
+++ b/Spring-Project/src/main/resources/templates/signin.html
@@ -27,7 +27,7 @@
 
 <main>
     <main>
-        <button th:onclick="|location.href='@{/v1/main}'|" class="back-button">Go To Back</button>
+        <button th:onclick="|location.href='@{/v1/main}'|" class="go-back">Go To Back</button>
         <div class="login_icon"><img src="/images/login_icon.png"/></div>
 
 
