--- a/Spring-Project/src/main/resources/static/css/signinstyles.css
+++ b/Spring-Project/src/main/resources/static/css/signinstyles.css
@@ -54,6 +54,7 @@ body {
 }
 
 .go-back {
+    width: 150px;
     display: inline-block;
     background-color: #CD31AB; /* 밝은 분홍색 */
     color: white;
@@ -62,9 +63,6 @@ body {
     text-decoration: none;
     font-size: 14px;
     font-weight: bold;
-    position: absolute;
-    top: 200px;
-    left: 50px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.2); /* 약간의 그림자 효과 */
 }
 
