--- a/Spring-Project/src/main/resources/templates/viewPost.html
+++ b/Spring-Project/src/main/resources/templates/viewPost.html
@@ -34,18 +34,18 @@
     </div>
     <section class="post-container">
         <!-- notice 유형 게시글 -->
-        <div th:if="${type == 'notice'}">
+        <div class="admin-notice-container" th:if="${type == 'notice'}">
             <h1 th:text="${board.getTitle()}"></h1>
             <div class="icon">
                 <img class="icon-img" src="/images/img-place-holder.png">
-                <div th:if="${canEdit}">
+                <div class="edit-delete-container" th:if="${canEdit}">
                     <button
                             th:onclick="|location.href='@{/v1/posts/notice/{id}/edit(id=${board.id})}'|"
                             class="icon-img-add-button">
-                        Edit Button
+                        Edit
                     </button>
 
-                    <form th:action="@{/v1/posts/notice/{id}(id=${board.id})}" method="post">
+                    <form class="delete-form" th:action="@{/v1/posts/notice/{id}(id=${board.id})}" method="post">
                         <input type="hidden" name="_method" value="delete"/>
                         <button type="submit" class="delete-button" onclick="return confirm('정말로 이 게시글을 삭제하시겠습니까?')">
                             Delete
@@ -72,18 +72,18 @@
         </div>
 
         <!-- post 유형 게시글 -->
-        <div th:if="${type == 'post'}">
+        <div class="user-post-container" th:if="${type == 'post'}">
             <h1 th:text="${board.getTitle()}"></h1>
             <div class="icon">
                 <img class="icon-img" src="/images/img-place-holder.png">
-                <div th:if="${canEdit}">
+                <div class="edit-delete-container" th:if="${canEdit}">
                     <button
                             th:onclick="|location.href='@{/v1/posts/post/{id}/edit(id=${board.id})}'|"
                             class="icon-img-add-button">
-                        Edit Button
+                        Edit
                     </button>
 
-                    <form th:action="@{/v1/posts/post/{id}(id=${board.id})}" method="post">
+                    <form class="delete-form" th:action="@{/v1/posts/post/{id}(id=${board.id})}" method="post">
                         <input type="hidden" name="_method" value="delete"/>
                         <button type="submit" class="delete-button" onclick="return confirm('정말로 이 게시글을 삭제하시겠습니까?')">
                             Delete
