--- a/Spring-Project/src/main/resources/templates/editPost.html
+++ b/Spring-Project/src/main/resources/templates/editPost.html
@@ -12,23 +12,25 @@
 <header>
     <div class="header-container">
         <div class="logo">
-            <img src="/images/yama_logo.png" alt="YAMA Logo">
+            <a th:href="@{/v1/main}"><img src="/images/yama_logo.png" alt="YAMA Logo"></a>
         </div>
         <nav>
             <ul>
-                <li><a href="#">Admin</a></li>
-                <li><a href="#">Sign Up</a></li>
-                <li><a href="#">Log In</a></li>
+                <li th:if="${userDTO != null and userDTO.getAuthority().name() != 'BANNED'}">
+                    <a th:if="${userDTO.getAuthority().name() == 'USER'}" th:href="@{/v1/user/{id}(id=${userDTO.getId()})}">My Page</a>
+                    <a th:if="${userDTO.getAuthority().name() == 'ADMIN'}" th:href="@{/v1/admin}">Admin</a>
+                </li>
+                <li th:if="${userDTO != null}"><a th:href="@{/v1/logout}" onclick="logoutMessage()">Log Out</a></li>
             </ul>
         </nav>
     </div>
 </header>
 <main>
     <div class="back-button-container">
-        <button th:onclick="|location.href='@{/v1/posts}'|" class="back-button">Go To Back</button>
+        <button class="back-button" onclick="history.back()">Go To Back</button>
     </div>
     <section class="post-container">
-        <div class="icon">
+        <div th:if="${board.getType().equals('post')}" class="icon">
             <img class="icon-img" src="/images/img-place-holder.png">
             <button class="icon-img-add-button">Edit Icon</button>
         </div>
@@ -54,7 +56,7 @@
 <footer>
     <div class="footer-container">
         <div class="footer-logo">
-            <img src="/images/yama_logo.png" alt="YAMA Logo">
+            <a th:href="@{/v1/main}"><img src="/images/yama_logo.png" alt="YAMA Logo"></a>
         </div>
         <div class="footer-info">
             <div class="footer-contact">
