--- a/Spring-Project/src/main/resources/templates/main.html
+++ b/Spring-Project/src/main/resources/templates/main.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" th:href="@{/css/main.css}">
     <link rel="stylesheet" th:href="@{/css/footer.css}">
     <link rel="stylesheet" th:href="@{/css/header.css}">
-    <script th:src="@{/js/main.js}"></script>
+    <script th:src="@{/js/logout.js}"></script>
 </head>
 <body>
 <header>
     <div class="header-container">
         <div class="logo">
-            <img src="/images/yama_logo.png" alt="YAMA Logo">
+            <a th:href="@{/v1/main}"><img src="/images/yama_logo.png" alt="YAMA Logo"></a>
         </div>
         <nav>
             <ul>
@@ -106,7 +106,7 @@
 <footer>
     <div class="footer-container">
         <div class="footer-logo">
-            <img src="/images/yama_logo.png" alt="YAMA Logo">
+            <a th:href="@{/v1/main}"><img src="/images/yama_logo.png" alt="YAMA Logo"></a>
         </div>
         <div class="footer-info">
             <div class="footer-contact">
