--- a/Spring-Project/src/main/resources/static/css/viewPost.css
+++ b/Spring-Project/src/main/resources/static/css/viewPost.css
@@ -40,22 +40,6 @@ textarea {
     vertical-align: middle;
 }
 
-.back-button-container {
-    display: flex;
-    justify-content: start;
-}
-
-.back-button {
-    font-size: 16px;
-    border-radius: 32px;
-    padding: 8px 16px;
-    margin: 30px;
-    background-color: #CD31AB;
-    color: white;
-    width: 150px;
-    align-items: center;
-}
-
 .post-container {
     display: flex;
     align-items: center;
@@ -66,14 +50,16 @@ textarea {
     width: 750px;
 }
 
-/*게시판 제목 및 내용 가운데 정렬 추가*/
 .post-container h1 {
     text-align: center;
     width: 100%;
 }
+
 .post-container .content {
-    text-align: center;
     margin-top: 50px;
+    margin-bottom: 100px;
+    white-space: pre-wrap;
+    word-break: break-word;
 }
 
 .post-container .user-post-container {
