--- a/Spring-Project/src/main/resources/templates/signup.html
+++ b/Spring-Project/src/main/resources/templates/signup.html
@@ -14,7 +14,7 @@
 <header>
     <div class="header-container">
         <div class="logo">
-            <img src="/images/yama_logo.png" alt="YAMA Logo">
+            <a th:href="@{/v1/main}"><img src="/images/yama_logo.png" alt="YAMA Logo"></a>
         </div>
         <nav>
             <ul>
@@ -26,7 +26,9 @@
 </header>
 
 <main>
-    <button th:onclick="|location.href='@{/v1/main}'|" class="back-button">Go To Back</button>
+    <div class="back-button-container">
+        <button class="back-button" onclick="history.back()">Go To Back</button>
+    </div>
     <div class="login_icon"><img src="/images/login_icon.png"/></div>
 
     <div class="signup-container">
@@ -70,7 +72,7 @@
 <footer>
     <div class="footer-container">
         <div class="footer-logo">
-            <img src="/images/yama_logo.png" alt="YAMA Logo">
+            <a th:href="@{/v1/main}"><img src="/images/yama_logo.png" alt="YAMA Logo"></a>
         </div>
         <div class="footer-info">
             <div class="footer-contact">
