--- a/Spring-Project/src/main/resources/templates/viewPost.html
+++ b/Spring-Project/src/main/resources/templates/viewPost.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Your App? My App! YAMA - 게시글 보기</title>
     <script th:src="@{/js/comment.js}"></script>
+    <script th:src="@{/js/enter.js}"></script>
+    <script th:src="@{/js/logout.js}"></script>
     <link rel="stylesheet" th:href="@{/css/footer.css}">
     <link rel="stylesheet" th:href="@{/css/header.css}">
     <link rel="stylesheet" th:href="@{/css/viewPost.css}">
@@ -12,7 +15,7 @@
 <header>
     <div class="header-container">
         <div class="logo">
-            <img src="/images/yama_logo.png" alt="YAMA Logo">
+            <a th:href="@{/v1/main}"><img src="/images/yama_logo.png" alt="YAMA Logo"></a>
         </div>
         <nav>
             <ul>
@@ -21,8 +24,6 @@
                        th:href="@{/v1/user/{id}(id=${userDTO.getId()})}">My Page</a>
                     <a th:if="${userDTO.getAuthority().name() == 'ADMIN'}" th:href="@{/v1/admin}">Admin</a>
                 </li>
-                <li><a th:if="${userDTO == null}" th:href="@{/v1/signup}">Sign Up</a></li>
-                <li th:if="${userDTO == null}"><a th:href="@{/v1/login}">Log In</a></li>
                 <li th:if="${userDTO != null}"><a th:href="@{/v1/logout}" onclick="logoutMessage()">Log Out</a></li>
             </ul>
         </nav>
@@ -30,14 +31,13 @@
 </header>
 <main>
     <div class="back-button-container">
-        <button th:onclick="|location.href='@{/v1/posts}'|" class="back-button">Go To Back</button>
+        <button class="back-button" onclick="history.back()">Go To Back</button>
     </div>
     <section class="post-container">
         <!-- notice 유형 게시글 -->
         <div class="admin-notice-container" th:if="${type == 'notice'}">
             <h1 th:text="${board.getTitle()}"></h1>
             <div class="icon">
-                <img class="icon-img" src="/images/img-place-holder.png">
                 <div class="edit-delete-container" th:if="${canEdit}">
                     <button
                             th:onclick="|location.href='@{/v1/posts/notice/{id}/edit(id=${board.id})}'|"
@@ -61,11 +61,6 @@
                         <div class="nickname" th:text="${board.authorName}">Nickname</div>
                     </div>
                     <div th:text="${#dates.format(board.createdAt, 'yyyy-MM-dd HH:mm:ss')}"></div>
-                </div>
-
-                <div class="download" th:if="${board.application != null}">
-                    <img class="download-img" src="/images/link.png">
-                    <a th:href="${board.application}" th:text="${board.application}">애플리케이션 링크</a>
                 </div>
             </div>
             <div class="content" th:utext="${board.content}"></div>
@@ -107,18 +102,16 @@
                 </div>
             </div>
             <div class="content" th:utext="${board.content}"></div>
-        </div>
 
-        <!-- 댓글 섹션 (두 유형 모두에 적용) -->
-        <div class="comment-section">
-            <h2>댓글</h2>
-            <div id="commentContainer">
-                <!-- 댓글들이 여기에 동적으로 추가됩니다 -->
-            </div>
-            <div class="comment-write">
-                <textarea id="commentContent" placeholder="댓글을 입력하세요"></textarea>
-                <div class="comment-button-container">
-                    <button class="comment-button" onclick="submitComment()">Comment</button>
+            <div th:if="${board.getType().equals('post')}" class="comment-section">
+                <h2>댓글</h2>
+                <div id="commentContainer">
+                </div>
+                <div class="comment-write">
+                    <textarea id="commentContent" placeholder="댓글을 입력하세요"></textarea>
+                    <div class="comment-button-container">
+                        <button class="comment-button" onclick="submitComment()">Comment</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -127,7 +120,7 @@
 <footer>
     <div class="footer-container">
         <div class="footer-logo">
-            <img src="/images/yama_logo.png" alt="YAMA Logo">
+            <a th:href="@{/v1/main}"><img src="/images/yama_logo.png" alt="YAMA Logo"></a>
         </div>
         <div class="footer-info">
             <div class="footer-contact">
@@ -151,11 +144,5 @@
 
 <input type="hidden" id="postId" th:value="${board.id}">
 <input type="hidden" id="currentUserId" th:value="${userDTO != null ? userDTO.getId() : ''}">
-
-<script>
-    function logoutMessage() {
-        alert('로그아웃 되었습니다.');
-    }
-</script>
 </body>
 </html>
