--- a/Spring-Project/src/main/resources/templates/writePost.html
+++ b/Spring-Project/src/main/resources/templates/writePost.html
@@ -6,35 +6,39 @@
     <link rel="stylesheet" th:href="@{/css/header.css}">
     <link rel="stylesheet" th:href="@{/css/footer.css}">
     <link rel="stylesheet" th:href="@{/css/common.css}">
+    <script th:src="@{/js/enter.js}"></script>
     <title>Your App? My App! YAMA - 게시글 작성</title>
 </head>
 <body>
 <header>
     <div class="header-container">
         <div class="logo">
-            <img src="/images/yama_logo.png" alt="YAMA Logo">
+            <a th:href="@{/v1/main}"><img src="/images/yama_logo.png" alt="YAMA Logo"></a>
         </div>
         <nav>
             <ul>
-                <li><a href="#">Admin</a></li>
-                <li><a href="#">Sign Up</a></li>
-                <li><a href="#">Log In</a></li>
+                <li th:if="${userDTO != null and userDTO.getAuthority().name() != 'BANNED'}">
+                    <a th:if="${userDTO.getAuthority().name() == 'USER'}" th:href="@{/v1/user/{id}(id=${userDTO.getId()})}">My Page</a>
+                    <a th:if="${userDTO.getAuthority().name() == 'ADMIN'}" th:href="@{/v1/admin}">Admin</a>
+                </li>
+                <li th:if="${userDTO != null}"><a th:href="@{/v1/logout}" onclick="logoutMessage()">Log Out</a></li>
             </ul>
         </nav>
     </div>
 </header>
 <main>
     <div class="back-button-container">
-        <button th:onclick="|location.href='@{/v1/posts}'|" class="back-button">Go To Back</button>
+        <button class="back-button" onclick="history.back()">Go To Back</button>
     </div>
     <section class="post-container">
-        <div class="icon">
+        <div th:if="${userDTO.getAuthority().name() == 'USER'}" class="icon">
             <img class="icon-img" src="/images/img-place-holder.png">
             <button class="icon-img-add-button">Add Icon</button>
         </div>
         <form th:action="@{/v1/posts}" th:object="${board}" method="post" class="input">
             <input th:field="*{title}" class="input-title input-img" type="text" placeholder="Input your [title]">
-            <input th:field="*{application}" class="input-link input-img" type="text" placeholder="Input your [application download link]">
+            <input th:if="${userDTO.getAuthority().name() == 'USER'}" th:field="*{application}" class="input-link input-img" type="text"
+                   placeholder="Input your [application download link]">
             <select th:field="*{categoryId}" class="input-tag-select">
                 <option th:each="category : ${categories}"
                         th:value="${category.id}"
@@ -51,7 +55,7 @@
 <footer>
     <div class="footer-container">
         <div class="footer-logo">
-            <img src="/images/yama_logo.png" alt="YAMA Logo">
+            <a th:href="@{/v1/main}"><img src="/images/yama_logo.png" alt="YAMA Logo"></a>
         </div>
         <div class="footer-info">
             <div class="footer-contact">
@@ -71,9 +75,6 @@
             </div>
         </div>
     </div>
-    <style>
-
-    </style>
 </footer>
 </body>
 </html>
