feature: 카테고리 명 동적 표시 html 구현
Issue: #41

--- a/Spring-Project/src/main/resources/templates/categoryPost.html
+++ b/Spring-Project/src/main/resources/templates/categoryPost.html
@@ -36,7 +36,7 @@
             <button class="back-button" onclick="history.back()">Go To Back</button>
         </div>
 
-        <p class="category-title">Business</p>
+        <p class="category-title" th:text="${categoryName}"></p>
 
         <div class="category-list-container">
             <select class="category-list" name="categoryId"
