--- a/Spring-Project/src/main/resources/static/css/main.css
+++ b/Spring-Project/src/main/resources/static/css/main.css
@@ -11,13 +11,6 @@ main {
     gap: 20px;
 }
 
-.card {
-    background-color: white;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-}
-
 .pointing-hand-section {
     width: 80%;
     max-width: 1200px;
@@ -42,11 +35,11 @@ main {
     margin-right: 100px;
 }
 
-.card.categories, .articles {
+.categories, .articles {
     width: 80%;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 20px;
+    padding: 20px 0 20px 0;
     background-color: #EFF0F3;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -59,36 +52,54 @@ main {
 }
 
 .category-slider {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px 0;
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+}
+
+.category-item-slider {
+    overflow: hidden;
+    width: calc(33% * 3.4);
 }
 
 .category-items {
     display: flex;
-    justify-content: space-between;
-    width: 90%;
-    height: 200px;
+    transition: transform 0.3s ease;
     gap: 10px;
 }
 
+.category-item {
+    flex: 0 0 auto;
+    width: calc((100% - 30px) / 4); /* 4개 아이템이 한 화면에 들어가도록 설정 */
+    margin-right: 0; /* margin-right 제거 */
+}
+
+.slider-arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 1;
+}
+
+.slider-arrow.left {
+    left: 10px;
+}
+
+.slider-arrow.right {
+    right: 10px;
+}
+
 .category-item.card {
-    flex: 1;
     min-width: 0;
-    padding: 10px;
     text-align: center;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     background-color: #f9f9f9;
     border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease;
-}
-
-.category-item.card p {
-    padding-top: 30px;
+    padding: 20px;
 }
 
 .category-item.card:hover {
@@ -101,23 +112,19 @@ main {
     color: white;
 }
 
-.category-item.card.active p {
-    padding-top: 30px;
-}
 
 .article-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 20px;
+    gap: 25px;
     width: 100%;
 }
 
 .article-card {
     background-color: #f9f9f9;
-    width: 80%;
+    width: 100%;
     height: 200px;
     border-radius: 8px;
-    padding: 15px;
     text-align: center;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     transition: all 0.3s ease;
@@ -137,7 +144,7 @@ main {
 .article-card h4 {
     font-size: 16px;
     font-weight: bold;
-    margin: 0 0 10px 0;
+    margin: 0 0 4px 0;
     text-align: center;
     width: 100%;
     white-space: nowrap;
@@ -156,6 +163,14 @@ main {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.article-card .article-img {
+    padding: 8px;
+}
+
+.article-card .article-info .article-author, .article-createAt {
+    padding: 8px;
 }
 
 .article-card:hover {
