--- a/Spring-Project/src/main/resources/templates/editPost.html
+++ b/Spring-Project/src/main/resources/templates/editPost.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" th:href="@{/css/editPost.css}">
@@ -30,11 +30,11 @@
         <button class="back-button" onclick="history.back()">Go To Back</button>
     </div>
     <section class="post-container">
-        <div th:if="${board.getType().equals('post')}" class="icon">
-            <img class="icon-img" src="/images/img-place-holder.png">
-            <button class="icon-img-add-button">Edit Icon</button>
-        </div>
-        <form th:action="${type == 'notice'} ? @{/v1/posts/notice/{id}/edit(id=${board.id})} : @{/v1/posts/post/{id}/edit(id=${board.id})}" th:object="${board}" class="input" method="post">
+        <form th:action="${type == 'notice'} ? @{/v1/posts/notice/{id}/edit(id=${board.id})} : @{/v1/posts/post/{id}/edit(id=${board.id})}" th:object="${board}" class="input" method="post" enctype="multipart/form-data">
+            <div th:if="${board.getType().equals('post')}" class="icon">
+                <img id="preview" class="icon-img" th:src="'data:image;base64,'+${image}">
+                <input type="file" id="file" name="file" class="icon-img-add-button" accept="image/*">
+            </div>
             <input type="hidden" name="_method" value="put"/>
             <input name="title" class="input-title input-img" type="text" placeholder="Input your [title]" th:value="${board.title}">
             <input name="application" class="input-link input-img" type="text" placeholder="Input your [application download link]" th:value="${board.application}">
@@ -77,5 +77,6 @@
         </div>
     </div>
 </footer>
+<script th:src="@{/js/sendImage.js}"></script>
 </body>
 </html>
