--- a/Spring-Project/src/main/resources/templates/editPost.html
+++ b/Spring-Project/src/main/resources/templates/editPost.html
@@ -37,7 +37,7 @@
             </div>
             <input type="hidden" name="_method" value="put"/>
             <input name="title" class="input-title input-img" type="text" placeholder="Input your [title]" th:value="${board.title}">
-            <input name="application" class="input-link input-img" type="text" placeholder="Input your [application download link]" th:value="${board.application}">
+            <input th:if="${userDTO.getAuthority() == 'USER'}" name="application" class="input-link input-img" type="text" placeholder="Input your [application download link]" th:value="${board.application}">
             <select name="categoryId" class="input-tag-select">
                 <option th:each="category : ${categories}"
                          th:value="${category.id}"
