fix: 로그아웃 시 알림 기능 추가
Issue: 13

--- a/Spring-Project/src/main/resources/templates/editPost.html
+++ b/Spring-Project/src/main/resources/templates/editPost.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" th:href="@{/css/header.css}">
     <link rel="stylesheet" th:href="@{/css/footer.css}">
     <link rel="stylesheet" th:href="@{/css/common.css}">
+    <script th:src="@{/js/common.js}"></script>
     <title>Your App? My App! YAMA - 게시글 작성</title>
 </head>
 <body>
