--- a/Spring-Project/src/main/resources/templates/admin.html
+++ b/Spring-Project/src/main/resources/templates/admin.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" th:href="@{/css/admin.css}">
     <link rel="stylesheet" th:href="@{/css/common.css}">
     <script th:src="@{/js/scroll.js}"></script>
+    <script th:src="@{/js/logout.js}"></script>
 </head>
 <body>
 <!-- footer가 아래에 안붙어서 만든 div -->
@@ -20,7 +21,7 @@
             <nav>
                 <ul>
                     <li><a href="">Admin</a></li>
-                    <li><a th:href="@{/v1/logout}">Log Out</a></li>
+                    <li><a th:href="@{/v1/logout}" onclick="logoutMessage()">Log Out</a></li>
                 </ul>
             </nav>
         </div>
