--- a/Spring-Project/src/main/resources/templates/categoryPost.html
+++ b/Spring-Project/src/main/resources/templates/categoryPost.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" th:href="@{/css/header.css}">
     <link rel="stylesheet" th:href="@{/css/categoryPost.css}">
     <link rel="stylesheet" th:href="@{/css/common.css}">
+    <script th:src="@{/js/logout.js}"></script>
 </head>
 <body>
 <!-- footer가 아래에 안붙어서 만든 div -->
