--- a/Spring-Project/src/main/resources/templates/writePost.html
+++ b/Spring-Project/src/main/resources/templates/writePost.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" th:href="@{/css/footer.css}">
     <link rel="stylesheet" th:href="@{/css/common.css}">
     <script th:src="@{/js/enter.js}"></script>
+    <script th:src="@{/js/logout.js}"></script>
     <title>Your App? My App! YAMA - 게시글 작성</title>
 </head>
 <body>
