fix: 글쓰기 버튼 제목 아래로 이동 및 로그인 박스 위로 올리기

--- a/Spring-Project/src/main/resources/static/css/categoryPost.css
+++ b/Spring-Project/src/main/resources/static/css/categoryPost.css
@@ -19,6 +19,11 @@ main {
     text-align: center;
 }
 
+.write-button {
+    margin-left: 1480px;
+    margin-bottom: 0;
+}
+
 .category-list-container {
     display: flex;
     justify-content: end;
