--- a/Spring-Project/src/main/resources/templates/categoryPost.html
+++ b/Spring-Project/src/main/resources/templates/categoryPost.html
@@ -39,6 +39,8 @@
 
         <p class="category-title" th:text="${categoryName}"></p>
 
+        <button class="write-button" th:onclick="|location.href='@{/v1/posts/write}'|">글쓰기</button>
+
         <div class="category-list-container">
             <select class="category-list" name="categoryId"
                     th:onchange="'location.href=\'' + @{/v1/posts} + '?categoryId=\' + this.value'">
@@ -49,7 +51,6 @@
                 </option>
             </select>
         </div>
-
 
         <table>
             <thead>
@@ -77,11 +78,7 @@
             </tbody>
         </table>
 
-        <button class="back-button" th:onclick="|location.href='@{/v1/posts/write}'|">글쓰기</button>
-
-
     </main>
-
     <footer>
         <div class="footer-container">
             <div class="footer-logo">
