--- a/Spring-Project/src/main/resources/static/css/common.css
+++ b/Spring-Project/src/main/resources/static/css/common.css
@@ -2,6 +2,12 @@
     font-family: Arial, sans-serif;
 }
 
+body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 button {
     background-color: #CD31AB;
     color: white;
