--- a/Spring-Project/src/main/resources/static/css/categoryPost.css
+++ b/Spring-Project/src/main/resources/static/css/categoryPost.css
@@ -14,6 +14,17 @@ main {
     text-align: center;
 }
 
+.search {
+    margin-left: 350px;
+}
+
+.search-text {
+    width: 315px;
+    font-size: 20px;
+    border: none;
+    border-bottom: 1px solid #ddd;
+}
+
 .write-button {
     margin-left: 1480px;
     margin-bottom: 0;
